--- a/jenkinscloud/Jenkinsfile
+++ b/jenkinscloud/Jenkinsfile
@@ -13,7 +13,7 @@ node{
       def projectNames = "${projectName}".split(",")
       steps {
         sh "echo start build"
-        for(int i =0;i<projectNames.size();i++{
+        for(int i =0;i<projectNames.size());i++{
             def currentProject =  projectNames.get(i)
             sh "echo ${currentProject} ****"
         }
