--- a/jenkinscloud/Jenkinsfile
+++ b/jenkinscloud/Jenkinsfile
@@ -1,24 +1,17 @@
-
-
-node{
-    stage('build') {
-
-      agent {
-              docker {
-                  image 'maven:3-alpine'
-                  args '-v /root/.m2:/root/.m2'
-              }
-          }
-
-      def projectNames = "${projectName}".split(",")
-      steps {
-        sh "echo start build"
-        for(int i =0;i<projectNames.size();i++){
-            def currentProject =  projectNames.get(i)
-            sh "echo ${currentProject} ****"
+pipeline {
+    agent {
+        docker {
+            image 'maven:3-alpine'
+            args '-v /root/.m2:/root/.m2'
         }
-        sh "mvn install"
-      }
+    }
+    stages {
+        stage('Build') {
+            steps {
+                sh 'mvn -B -DskipTests clean package'
+            }
+        }
+       
     }
 }
 
