--- a/jenkinscloud/Jenkinsfile
+++ b/jenkinscloud/Jenkinsfile
@@ -8,9 +8,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh "cd jenkinscloud"
-                sh "ls -ll"
-                sh "cd jenkinscloud"
+                sh "cd ../jenkinscloud/jenkinscloud"
                 sh "ls -ll"
                 sh 'mvn -B -DskipTests clean package'
             }
