--- a/jenkinscloud/Jenkinsfile
+++ b/jenkinscloud/Jenkinsfile
@@ -8,6 +8,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
+                sh "pwd"
                 sh "cd ../jenkinscloud/jenkinscloud"
                 sh "ls -ll"
                 sh 'mvn -B -DskipTests clean package'
