--- a/jenkinscloud/Jenkinsfile
+++ b/jenkinscloud/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
                 sh "pwd"
                 sh "cd ../jenkinscloud/jenkinscloud"
                 sh "ls -ll"
-                sh 'mvn -B -DskipTests clean package'
+                sh 'mvn -B -X -DskipTests clean package'
             }
         }
 
